# ArguMint

./: .gitignore  README.md  pyproject.toml
argumint/: __init__.py  argu_mint.py
