[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["argumint"]

[project]
name = "argumint"
version = "2.0.1"
dependencies = ["typing_extensions"]
requires-python = ">=3.10"
authors = [
  {name = "Cariel Becker", email = "cariel.becker@gmx.de"},
]
maintainers = [
  {name = "Cariel Becker", email = "cariel.becker@gmx.de"},
]
description = "A fresh new way to handle cli"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "LGPL-3.0-only"}
keywords = ["cli", "command line", "simplified", "fresh", "auto", "automatic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Natural Language :: English",
]

[project.urls]
Home = "https://pypi.org/project/argumint/"
Repository = "https://github.com/adalfarus/argumint"
Documentation = "https://github.com/adalfarus/argumint/wiki"
"Issue tracker" = "https://github.com/adalfarus/argumint/issues"
